@@ -7,6 +7,8 @@ package marquez;
 
 import static marquez.db.ColumnLineageTestUtils.getDatasetA;
 import static marquez.db.ColumnLineageTestUtils.getDatasetB;
+import static marquez.db.LineageTestUtils.PRODUCER_URL;
+import static marquez.db.LineageTestUtils.SCHEMA_URL;
 import static org.assertj.core.api.Assertions.assertThat;
 
 import com.fasterxml.jackson.core.type.TypeReference;
@@ -365,14 +367,17 @@ public class DatasetIntegrationTest extends BaseIntegrationTest {
     String namespace = "namespace";
     String name = "table";
     LineageEvent event =
-        new LineageEvent(
-            "COMPLETE",
-            Instant.now().atZone(ZoneId.systemDefault()),
-            new LineageEvent.Run(UUID.randomUUID().toString(), null),
-            new LineageEvent.Job("namespace", "job_name", null),
-            List.of(new LineageEvent.Dataset(namespace, name, LineageTestUtils.newDatasetFacet())),
-            Collections.emptyList(),
-            "the_producer");
+        LineageEvent.builder()
+            .eventType("COMPLETE")
+            .eventTime(Instant.now().atZone(ZoneId.systemDefault()))
+            .run(new LineageEvent.Run(UUID.randomUUID().toString(), null))
+            .job(new LineageEvent.Job("namespace", "job_name", null))
+            .inputs(
+                List.of(
+                    new LineageEvent.Dataset(namespace, name, LineageTestUtils.newDatasetFacet())))
+            .outputs(Collections.emptyList())
+            .producer("the_producer")
+            .build();
 
     final CompletableFuture<Integer> resp = sendEvent(event);
     assertThat(resp.join()).isEqualTo(201);
@@ -388,14 +393,17 @@ public class DatasetIntegrationTest extends BaseIntegrationTest {
     String namespace = "namespace";
     String name = "anotherTable";
     LineageEvent event =
-        new LineageEvent(
-            "COMPLETE",
-            Instant.now().atZone(ZoneId.systemDefault()),
-            new LineageEvent.Run(UUID.randomUUID().toString(), null),
-            new LineageEvent.Job("namespace", "job_name", null),
-            List.of(new LineageEvent.Dataset(namespace, name, LineageTestUtils.newDatasetFacet())),
-            Collections.emptyList(),
-            "the_producer");
+        LineageEvent.builder()
+            .eventType("COMPLETE")
+            .eventTime(Instant.now().atZone(ZoneId.systemDefault()))
+            .run(new LineageEvent.Run(UUID.randomUUID().toString(), null))
+            .job(new LineageEvent.Job("namespace", "job_name", null))
+            .inputs(
+                List.of(
+                    new LineageEvent.Dataset(namespace, name, LineageTestUtils.newDatasetFacet())))
+            .outputs(Collections.emptyList())
+            .producer("the_producer")
+            .build();
 
     CompletableFuture<Integer> resp = sendEvent(event);
     assertThat(resp.join()).isEqualTo(201);
@@ -414,14 +422,15 @@ public class DatasetIntegrationTest extends BaseIntegrationTest {
   @Test
   public void testApp_getDatasetContainsColumnLineage() {
     LineageEvent event =
-        new LineageEvent(
-            "COMPLETE",
-            Instant.now().atZone(ZoneId.systemDefault()),
-            new LineageEvent.Run(UUID.randomUUID().toString(), null),
-            new LineageEvent.Job("namespace", "job_name", null),
-            List.of(getDatasetA()),
-            List.of(getDatasetB()),
-            "the_producer");
+        LineageEvent.builder()
+            .eventType("COMPLETE")
+            .eventTime(Instant.now().atZone(ZoneId.systemDefault()))
+            .run(new LineageEvent.Run(UUID.randomUUID().toString(), null))
+            .job(new LineageEvent.Job("namespace", "job_name", null))
+            .inputs(List.of(getDatasetA()))
+            .outputs(List.of(getDatasetB()))
+            .producer("the_producer")
+            .build();
 
     CompletableFuture<Integer> resp =
         this.sendLineage(Utils.toJson(event))
@@ -457,14 +466,17 @@ public class DatasetIntegrationTest extends BaseIntegrationTest {
     String namespace = "namespace";
     String name = "table";
     LineageEvent event =
-        new LineageEvent(
-            "COMPLETE",
-            Instant.now().atZone(ZoneId.systemDefault()),
-            new LineageEvent.Run(UUID.randomUUID().toString(), null),
-            new LineageEvent.Job("namespace", "job_name", null),
-            List.of(new LineageEvent.Dataset(namespace, name, LineageTestUtils.newDatasetFacet())),
-            Collections.emptyList(),
-            "the_producer");
+        LineageEvent.builder()
+            .eventType("COMPLETE")
+            .eventTime(Instant.now().atZone(ZoneId.systemDefault()))
+            .run(new LineageEvent.Run(UUID.randomUUID().toString(), null))
+            .job(new LineageEvent.Job("namespace", "job_name", null))
+            .inputs(
+                List.of(
+                    new LineageEvent.Dataset(namespace, name, LineageTestUtils.newDatasetFacet())))
+            .outputs(Collections.emptyList())
+            .producer("the_producer")
+            .build();
 
     final CompletableFuture<Integer> resp = sendEvent(event);
     assertThat(resp.join()).isEqualTo(201);
@@ -481,27 +493,32 @@ public class DatasetIntegrationTest extends BaseIntegrationTest {
     String name = "table";
 
     LineageEvent firstEvent =
-        new LineageEvent(
-            "COMPLETE",
-            Instant.now().atZone(ZoneId.systemDefault()),
-            new LineageEvent.Run(UUID.randomUUID().toString(), null),
-            new LineageEvent.Job(namespaceName, "job_name", null),
-            List.of(
-                new LineageEvent.Dataset(namespaceName, name, LineageTestUtils.newDatasetFacet())),
-            Collections.emptyList(),
-            "the_producer");
+        LineageEvent.builder()
+            .eventType("COMPLETE")
+            .eventTime(Instant.now().atZone(ZoneId.systemDefault()))
+            .run(new LineageEvent.Run(UUID.randomUUID().toString(), null))
+            .job(new LineageEvent.Job(namespaceName, "job_name", null))
+            .inputs(
+                List.of(
+                    new LineageEvent.Dataset(
+                        namespaceName, name, LineageTestUtils.newDatasetFacet())))
+            .outputs(Collections.emptyList())
+            .producer("the_producer")
+            .build();
 
     LineageEvent secondEvent =
-        new LineageEvent(
-            "COMPLETE",
-            Instant.now().atZone(ZoneId.systemDefault()),
-            new LineageEvent.Run(UUID.randomUUID().toString(), null),
-            new LineageEvent.Job(namespaceName, "second_job_name", null),
-            List.of(
-                new LineageEvent.Dataset(
-                    namespaceName, name + "2", LineageTestUtils.newDatasetFacet())),
-            Collections.emptyList(),
-            "the_producer");
+        LineageEvent.builder()
+            .eventType("COMPLETE")
+            .eventTime(Instant.now().atZone(ZoneId.systemDefault()))
+            .run(new LineageEvent.Run(UUID.randomUUID().toString(), null))
+            .job(new LineageEvent.Job(namespaceName, "second_job_name", null))
+            .inputs(
+                List.of(
+                    new LineageEvent.Dataset(
+                        namespaceName, name + "2", LineageTestUtils.newDatasetFacet())))
+            .outputs(Collections.emptyList())
+            .producer("the_producer")
+            .build();
 
     CompletableFuture<Integer> resp = sendEvent(firstEvent);
     assertThat(resp.join()).isEqualTo(201);
@@ -529,15 +546,18 @@ public class DatasetIntegrationTest extends BaseIntegrationTest {
     assertThat(jobs).hasSize(0);
 
     LineageEvent eventThatWillUndeleteNamespace =
-        new LineageEvent(
-            "COMPLETE",
-            Instant.now().atZone(ZoneId.systemDefault()),
-            new LineageEvent.Run(UUID.randomUUID().toString(), null),
-            new LineageEvent.Job(namespaceName, "job_name", null),
-            List.of(
-                new LineageEvent.Dataset(namespaceName, name, LineageTestUtils.newDatasetFacet())),
-            Collections.emptyList(),
-            "the_producer");
+        LineageEvent.builder()
+            .eventType("COMPLETE")
+            .eventTime(Instant.now().atZone(ZoneId.systemDefault()))
+            .run(new LineageEvent.Run(UUID.randomUUID().toString(), null))
+            .job(new LineageEvent.Job(namespaceName, "job_name", null))
+            .inputs(
+                List.of(
+                    new LineageEvent.Dataset(
+                        namespaceName, name, LineageTestUtils.newDatasetFacet())))
+            .outputs(Collections.emptyList())
+            .producer("the_producer")
+            .build();
 
     resp = sendEvent(eventThatWillUndeleteNamespace);
     assertThat(resp.join()).isEqualTo(201);
@@ -555,5 +575,58 @@ public class DatasetIntegrationTest extends BaseIntegrationTest {
 
     jobs = client.listJobs(namespaceName);
     assertThat(jobs).hasSize(1);
+  }
+
+  @Test
+  public void testApp_getTableVersionsWithSymlinks() {
+    client.createDataset(NAMESPACE_NAME, DB_TABLE_NAME, DB_TABLE_META);
+
+    ImmutableMap<String, Object> outputFacets =
+        ImmutableMap.of("outputFacetKey", "outputFacetValue");
+    ImmutableMap<String, Object> inputFacets = ImmutableMap.of("inputFacetKey", "inputFacetValue");
+
+    final LineageEvent.DatasetFacets datasetFacets =
+        LineageTestUtils.newDatasetFacet(
+            outputFacets,
+            LineageEvent.SchemaField.builder()
+                .name("firstname")
+                .type("string")
+                .description("the first name")
+                .build());
+    datasetFacets
+        .getDocumentation()
+        .setDescription(DB_TABLE_META.getDescription().orElse("the dataset documentation"));
+    datasetFacets.setSymlinks(
+        new LineageEvent.DatasetSymlinkFacet(
+            PRODUCER_URL,
+            SCHEMA_URL,
+            Collections.singletonList(
+                new LineageEvent.SymlinkIdentifier("symlinkNamespace", "symlinkName", "type"))));
+    final LineageEvent lineageEvent =
+        LineageEvent.builder()
+            .producer("testApp_getTableVersionsWithSymlinks")
+            .eventType("COMPLETE")
+            .run(
+                new LineageEvent.Run(
+                    UUID.randomUUID().toString(), LineageEvent.RunFacet.builder().build()))
+            .job(LineageEvent.Job.builder().namespace(NAMESPACE_NAME).name(JOB_NAME).build())
+            .eventTime(ZonedDateTime.now())
+            .inputs(
+                Collections.singletonList(
+                    LineageEvent.Dataset.builder()
+                        .namespace(NAMESPACE_NAME)
+                        .name(DB_TABLE_NAME)
+                        .facets(datasetFacets)
+                        .build()))
+            .outputs(Collections.emptyList())
+            .build();
+    final CompletableFuture<Integer> resp = sendEvent(lineageEvent);
+    assertThat(resp.join()).isEqualTo(201);
+    List<DatasetVersion> versions = client.listDatasetVersions(NAMESPACE_NAME, DB_TABLE_NAME);
+
+    versions.forEach(
+        datasetVersion -> {
+          assertThat(datasetVersion.getName()).isNotEqualTo("symlinkName");
+        });
   }
 }
